# swagger.json
@@ -2593,7 +2593,7 @@
                   },
                   "contentType": {
                     "type": "string",
-                    "description": "The type of message content, must be one of the following: string, MessageMedia, MessageMediaFromURL, Location, Buttons, or List"
+                    "description": "The type of message content, must be one of the following: string, MessageMedia, MessageMediaFromURL, Location, Contact, or Poll"
                   },
                   "content": {
                     "type": "object",
@@ -2638,50 +2638,8 @@
                     "content": {
                       "latitude": -6.2,
                       "longitude": 106.8,
-                      "description": "Jakarta"
-                    }
-                  }
-                },
-                "Buttons": {
-                  "value": {
-                    "chatId": "6281288888888@c.us",
-                    "contentType": "Buttons",
-                    "content": {
-                      "body": "Hello World!",
-                      "buttons": [
-                        {
-                          "body": "button 1"
-                        }
-                      ],
-                      "title": "Hello World!",
-                      "footer": "Hello World!"
-                    }
-                  }
-                },
-                "List": {
-                  "value": {
-                    "chatId": "6281288888888@c.us",
-                    "contentType": "List",
-                    "content": {
-                      "body": "Hello World!",
-                      "buttonText": "Hello World!",
-                      "sections": [
-                        {
-                          "title": "sectionTitle",
-                          "rows": [
-                            {
-                              "id": "customId",
-                              "title": "ListItem2",
-                              "description": "desc"
-                            },
-                            {
-                              "title": "ListItem2"
-                            }
-                          ]
-                        }
-                      ],
-                      "title": "Hello World!",
-                      "footer": "Hello World!"
+                      "name": "Jakarta",
+                      "address": "Indonesia"
                     }
                   }
                 },
